<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:title="@string/home"
            android:icon="@drawable/home_icon"
            android:id="@+id/home"
            />
       <!-- <item
            android:title="@string/categories"
            android:icon="@drawable/home"
            android:id="@+id/drawer_categories"
            />
        <item
            android:icon="@drawable/todays_deal"
            android:title="@string/todays_s_deal"
            android:id="@+id/drawer_deal"
            />
        <item
            android:title="@string/wish_list"
            android:icon="@drawable/wish"
            android:id="@+id/drawer_wish"
            />-->

            <item
            android:title="@string/my_orders"
            android:icon="@drawable/orders"
            android:id="@+id/orders"
            />


       <!-- <item
            android:title="@string/my_purchases"
            android:icon="@drawable/history"
            android:id="@+id/history"
            />-->
      <!--  <item
            android:title="@string/settings"
            android:icon="@drawable/setting_icon"
            android:id="@+id/settings"
            />-->

        <item
            android:title="@string/rate_us"
            android:icon="@drawable/rate_us_icon"
            android:id="@+id/rateUs"
            />

        <item
            android:title="@string/share_app"
            android:icon="@drawable/share"
            android:id="@+id/share"
            />
        <item
            android:icon="@drawable/helpline"
            android:title="@string/call_helpline"
            android:id="@+id/helpline"

            />

        <item
            android:title="@string/about_us"
            android:icon="@drawable/about"
            android:id="@+id/about"
            />
        <item
            android:icon="@drawable/login"
            android:title="@string/logout"
            android:id="@+id/login"
            />



    </group>

</menu>