<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:background="@drawable/edit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView

        android:background="@color/colorAccent"
        android:textAlignment="center"
        android:id="@+id/service"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/no_services_between"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:elevation="5dp"
        android:id="@+id/starts"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_below="@id/service"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/friday_5_00_pm_saturday_6_00_pm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Close"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        android:background="@drawable/edit"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/starts"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</RelativeLayout>