<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="false"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:background="@drawable/bottomsheetbg"
    app:behavior_peekHeight="@dimen/bottomsheetpeakhight"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <androidx.cardview.widget.CardView
            android:elevation="10dp"
            android:id="@+id/offersCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/offers"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/seasonsCard"
            android:layout_below="@id/offersCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/season_special"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/vegCard"
            android:layout_below="@id/seasonsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/veg_market"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/nonvegCard"
            android:layout_below="@id/vegCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/non_veg_market"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/fruitsCard"
            android:layout_below="@id/nonvegCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/fruits_market"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/groceriesCard"
            android:layout_below="@id/fruitsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/groceries"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/dryfruitsCard"
            android:layout_below="@id/groceriesCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/themeBlue"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/dry_fruits"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </androidx.cardview.widget.CardView>



    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
