<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_margin="@dimen/_30sdp"
        android:src="@drawable/back"
        android:id="@+id/back"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/back"
        android:layout_alignStart="@+id/back"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />
    <RelativeLayout

        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:hint="@string/your_name"
            android:id="@+id/username"
            android:layout_margin="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edit" />

        <EditText
            android:layout_below="@id/username"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/edit"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:padding="@dimen/_10sdp" />
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_below="@id/phone"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/TCPolicy"
                android:theme="@style/WhiteTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/privacyLink"
                android:clickable="true"
                android:padding="@dimen/_5sdp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:text="@string/accept_our_tc_and_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true" />

        </LinearLayout>

    </RelativeLayout>


    <ImageButton

        android:id="@+id/sendOtpButton"
        android:layout_margin="@dimen/_30sdp"
        android:src="@drawable/forward"
        android:contentDescription="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/disable_button" />
</RelativeLayout>