<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShippingActivity">

    <include
        android:id="@+id/custom_toolbar_shipping"
        layout="@layout/custom_toolbar" />

    <ScrollView
        android:layout_above="@id/LocationFormSubmit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_toolbar_shipping">

        <LinearLayout
            android:theme="@style/WhiteTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id1"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:textSize="@dimen/_12sdp"
                    android:maxLines="1"
                    android:hint="@string/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id2"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:textSize="@dimen/_12sdp"
                    android:maxLines="1"
                    android:hint="@string/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id3"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/office"
                android:hint="@string/door_n_o_office_company"
                android:textSize="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id4"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address1"
                android:hint="@string/address_line_1_street_name"
                android:textSize="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id5"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address2"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/address_line_2_street_name_optional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id6"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/country"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id7"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/state"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id8"
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/city_town"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/_5sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pinCode"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/pin_code_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



    </ScrollView>

    <Button
        android:id="@+id/LocationFormSubmit"
        android:textStyle="bold"
        android:textSize="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent" />
</RelativeLayout>