<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/edit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textPrompt"
        android:padding="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/are_you_sure_want_to_place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_below="@id/textPrompt"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"
            android:background="@drawable/button"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/placeOrder"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:text="@string/place_order"
            android:background="@drawable/button"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</RelativeLayout>